# EMS

./: .gitignore  CMakeLists.txt
apptools/: MUSC.py  ems_convertLFA2nc.py
aux/lfatools/: CMakeLists.txt
data/CASES/: GABLS1_REF_SCM_driver.nc
ems/: CMakeLists.txt  cases.py  install_MUSC.py  namelist.py  prep_init_forc_atm.py  prep_nam_atm_ALARO.py  prep_nam_atm_HARMONIE.py
ems/dephycf/: Axis.py  Case.py  Variable.py  constants.py  plotbasics.py  thermo.py
ems/scripts/: run.sh
examples/: CMakeLists.txt
examples/config/: config_46h1_HARMAROME_DEV.py  config_46t1_ALAROCZ.py
examples/grid/: L87_ALAROCZ.dta
examples/namelist/ALARO/: namarp_46t1_ALARO_CZ
examples/namelist/AROME/: namarp_46h1_AROME_OPER  namarp_46t1_AROME_OPER
examples/namelist/HARMONIE/: namarp_46h1_HARMONIE_OPER  namarp_46t1_HARMONIE_OPER
examples/namelist/SURFEX/: nam.sfx.46t1.test_gabls1
examples/post/: config_AMMA.py  config_ARMCU.py  config_FIRE.py  config_MPACE.py  config_RICO.py  config_SANDU.py
master/: .documenter-siteinfo.json  index.html  search_index.js
master/installation/: index.html
master/intorduction/: index.html
master/introduction/: index.html
master/musc_config/: index.html
